Work for Automation API, Design Patterns, and Customer API references homework

--- a/AppLibrary/AppLibrary.vcxproj
+++ b/AppLibrary/AppLibrary.vcxproj
@@ -101,6 +101,9 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="Journaling_BlockBuilder.h" />
     <ClInclude Include="Journaling_FeatureCollection.h" />
+    <ClInclude Include="Journaling_TextureBuilder.h" />
+    <ClInclude Include="Texture.h" />
+    <ClInclude Include="TextureBuilder.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Block.cpp" />
@@ -111,6 +114,9 @@
     <ClCompile Include="Feature.cpp" />
     <ClCompile Include="Journaling_BlockBuilder.cpp" />
     <ClCompile Include="Journaling_FeatureCollection.cpp" />
+    <ClCompile Include="Journaling_TextureBuilder.cpp" />
+    <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="TextureBuilder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AppsCore\AppsCore.vcxproj">
