--- a/AutomationBinding/AutomationBinding.vcxproj.filters
+++ b/AutomationBinding/AutomationBinding.vcxproj.filters
@@ -64,6 +64,15 @@
     <ClInclude Include="AutomationAPI_WireBuilder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AutomationAPI_TextureCollection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AutomationAPI_Texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AutomationAPI_TextureBuilder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -100,6 +109,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RoutingCollection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureCollection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
